tests/resources/invalid/defEOF.ebnf
(* EOF before the def is finished *)
product = listen here yo-
